--- a/Отчет.md
+++ b/Отчет.md
@@ -115,7 +115,7 @@ WORKDIR /app
 
 Видеоролик, который я использовал для обработки, доступен в YouTube: https://www.youtube.com/watch?v=dd1kN_myNDs
 
-Получившийся в итоге файл `output.txt` содержит результат работы построенного Pipeline.
+Получившийся в итоге файл `output.pdf` содержит результат работы построенного Pipeline.
 
 ## Пайплайн для обучения модели
 
